fix: overflow-y process selection

--- a/src/public/css/carousel.css
+++ b/src/public/css/carousel.css
@@ -44,7 +44,7 @@
 }
 .card .cardContent {
   overflow-y: auto;
-  padding: 4vh 4vw 0 4vw;
+  padding: 4vw 0 0 4vw;
   margin-bottom: 2vh;
 
 }
